# DataExplore

./: .gitignore  pyproject.toml
dataexplore/core/: animation.py  cloud.py  pca.py  viz.py
dataexplore/docs/science/: theory.tex
dataexplore/loader/health_kit/: apple_health.py  schema.py
